syntax = "proto3";
option java_multiple_files = true;
package com.example.server.grpcserver;

message AddressRequest {
  string cep = 1;
}

message AddressResponse {
  string cep = 1;
  string cidade = 2;
}

service CepService {
  rpc getAddress(AddressRequest) returns (AddressResponse);
}